Eps 14 Operator Komporasi

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 /13-Operasi Asigment/nbproject/private/
 /13-Operasi Asigment/build/
+/14_Operator_Komporasi/.idea/
+/14_Operator_Komporasi/.idea/encodings.xml
+/14_Operator_Komporasi/.idea/misc.xml
+/14_Operator_Komporasi/.idea/vsc.xml
+/14_Operator_Komporasi/.idea/workspace.xml
+/14_Operator_Komporasi/14_Operator_Komporasi.iml
+
+
+
+
