--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@
 /14_Operator_Komporasi/.idea/vsc.xml
 /14_Operator_Komporasi/.idea/workspace.xml
 /14_Operator_Komporasi/14_Operator_Komporasi.iml
+./.idea/
+./.idea
+.idea/
+.idea
+
 
 
 
